added more css styles and necessary HTML

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 </head>
 <body>
   <main>
-    <div class="wrapper"></div>
+    <div class="wrapper">
       <img src="./assets/images/image-omelette.jpeg" alt="omelette with basil on a plate">
       <h1>Simple Omelette Recipe</h1>
       <p class="short-description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+      to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
       <div class="prepTime">
-        <span class="prep-title">Preparation time</span>
+        <span class="prepTitle">Preparation time</span>
         <ul>
           <li><span class="bold">Total: </span>Approximately 10 minutes</li>
           <li><span class="bold">Preparation: </span>5 minutes</li>
@@ -58,23 +58,30 @@
       <hr>
       <h2>Nutrition</h2>
       <p>The table below shows nutritional values per serving without the additional fillings.</p>
-      
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
+      <table>
+        <tr> 
+          <td class="table-title">Calories</td>
+          <td>277kcal</td>
+        </tr>
+        <tr> 
+          <td class="table-title">Carbs</td>
+          <td>0g</td>
+        </tr>
+        <tr> 
+          <td class="table-title">Protein</td>
+          <td>20g</td>
+        </tr>
+        <tr> 
+          <td class="table-title">Fat</td>
+          <td>22g</td>
+        </tr>
+      </table>
+      </div>
     </div>
   </main>
   <footer><div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Mateusz Subiel</a>.
   </div></footer>
   
 </body>
