Finished the challenge

--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
       <p>The table below shows nutritional values per serving without the additional fillings.</p>
       <table>
         <tr> 
-          <td class="table-title">Calories</td>
+          <th>Calories</th>
           <td>277kcal</td>
         </tr>
         <tr> 
-          <td class="table-title">Carbs</td>
+          <th>Carbs</th>
           <td>0g</td>
         </tr>
         <tr> 
-          <td class="table-title">Protein</td>
+          <th>Protein</th>
           <td>20g</td>
         </tr>
         <tr> 
-          <td class="table-title">Fat</td>
+          <th>Fat</th>
           <td>22g</td>
         </tr>
       </table>
